Fix several front-end details
-Ensure that lightning flashes happen in main game page and are
accompanied by thunder sound.
-Ensure that all elements are hidden when index.html loads, then all
fade in.
-Reduce top margin on About page so that footer overlap is less likely
to happen. Also add a <br> at bottom of About section so that spacing
looks nicer on page.

--- a/css/homepagebackground.css
+++ b/css/homepagebackground.css
@@ -120,7 +120,7 @@ ul{
 
 
 #aboutUs{
-	margin-top: 150px;
+	margin-top: 20px;
 	/*font-family: 'gypsy_curse';*/
 }
 
